--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h2>Index:</h2>
         
         <ol>
-            <li><a href="korynthian.github.io/recipes/crepes.html/">Crepes</a></li>
+            <li><a href="crepes.html">Crepes</a></li>
         </ol>
     </body>
 </html>
