--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         
         <ol>
             <li><a href="crepes">Crepes</a></li>
+            <li><a href="chicken-noodle-soup">Chicken Noodle Soup</a></li>
         </ol>
     </body>
 </html>
