--- a/chicken-noodle-soup.html
+++ b/chicken-noodle-soup.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
     </head>
     <body>
-        
+        <a href="index">Index</a>
         <h2>Chicken Noodle Soup</h2>
         
         <ul>
