--- a/crepes.html
+++ b/crepes.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
     </head>
     <body>
-        
+        <a href="index">Index</a>
         <h2>Crepes</h2>
         
         <ul>
