--- a/crepes.html
+++ b/crepes.html
@@ -3,6 +3,7 @@
     <head>
         <title>Crepe Recipe</title>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <a href="index">Index</a>
