--- a/chicken-noodle-soup.html
+++ b/chicken-noodle-soup.html
@@ -3,6 +3,7 @@
     <head>
         <title>Chicken Noodle Soup Recipe</title>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <a href="index">Index</a>
