--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
         
         <h2>Index:</h2>
         
-        <ol>
-            <li><a href="crepes">Crepes</a></li>
-            <li><a href="chicken-noodle-soup">Chicken Noodle Soup</a></li>
-        </ol>
+        <a href="crepes">Crepes</a>
+        <a href="chicken-noodle-soup">Chicken Noodle Soup
     </body>
 </html>
