--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         <h2>Index:</h2>
         
         <a href="crepes">Crepes</a>
-        <a href="chicken-noodle-soup">Chicken Noodle Soup
+        <a href="chicken-noodle-soup">Chicken Noodle Soup</a>
+            <a href="meatballs">Meatballs</a>
+
     </body>
 </html>
