--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
         
         <a href="crepes">Crepes</a>
         <a href="chicken-noodle-soup">Chicken Noodle Soup</a>
-            <a href="meatballs">Meatballs</a>
+        <a href="meatballs">Meatballs</a>
+        <a href="meatball-soup">Meatball Soup</a>
 
     </body>
 </html>
