--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <a href="chicken-noodle-soup">Chicken Noodle Soup</a>
         <a href="meatballs">Meatballs</a>
         <a href="meatball-soup">Meatball Soup</a>
+        <a href="cookies">Cookies</a>
 
     </body>
 </html>
