--- a/index.html
+++ b/index.html
@@ -17,5 +17,7 @@
         <a href="meatball-soup">Meatball Soup</a>
         <a href="cookies">Cookies</a>
 
+        <a href="https://github.com/korynthian/recipes">See the code behind this website!</a>
+
     </body>
 </html>
