Completed meatball soup

--- a/meatball-soup.html
+++ b/meatball-soup.html
@@ -10,28 +10,35 @@
         <h2>Meatball Soup</h2>
         
         <ul>
-            <li>--</li>
-            <li>--</li>
-            <li>--</li>
-            <li>--</li>
-            <li>--</li>
-            <li>--</li>
-            <li>--</li>
+            <li>Onion</li>
+            <li>Carrot</li>
+            <li>Red Pepper</li>
+            <li>Potatoes</li>
+            <li>Water</li>
+            <li>Seasoning(salt, bay leaf, coriander, salt, black pepper, parsley)</li>
+            <li>White Bread</li>
+            <li>Groumd Meat</li>
 
 
         </ul>
         
-        <p><strong>Step 1:</strong> --
+        <p><strong>Step 1:</strong> Mix onion, carrot, and red pepper. Sear in oil.
 </p>
-        <p><strong>Step 2:</strong> --
+        <p><strong>Step 2:</strong> Cut potatoes into cubes.
 </p>
-        <p><strong>Step 3:</strong> --
+        <p><strong>Step 3:<strong> Heat a large pot with water, salt, bay leaf, coriander, a small amount of onion and carrot, and the potatoes.
 </p>
-        <p><strong>Step 4:</strong> --
+        <p><strong>Step 4:</strong> Soak 2 slices of white bread in water.
 </p>
-        <p><strong>Step 5:</strong> --
+        <p><strong>Step 5:</strong> Mix ground meat, the bread, salt, black pepper, coriander. Mix thoroughly.
 </p>
-        <p><strong>Step 6:</strong> --
+        <p><strong>Step 6:</strong> Make small meatballs and immediately put them in the boiling soup.
+</p>
+        <p><strong>Step 7:</strong> Place the seared onions and carrots into the soup. Add parsley.
+</p>
+        <p><strong>Step 8:</strong> Once the meatballs are cooked, cook on low heat for 5-7 minutes.
+</p>
+        <p><strong>Step 9:</strong> Serve.
 </p>
     </body>
 </html>
