Fixed bug where 3- is bold

--- a/meatball-soup.html
+++ b/meatball-soup.html
@@ -26,7 +26,7 @@
 </p>
         <p><strong>Step 2:</strong> Cut potatoes into cubes.
 </p>
-        <p><strong>Step 3:<strong> Heat a large pot with water, salt, bay leaf, coriander, a small amount of onion and carrot, and the potatoes.
+        <p><strong>Step 3:</strong> Heat a large pot with water, salt, bay leaf, coriander, a small amount of onion and carrot, and the potatoes.
 </p>
         <p><strong>Step 4:</strong> Soak 2 slices of white bread in water.
 </p>
