--- a/chicken-noodle-soup.html
+++ b/chicken-noodle-soup.html
@@ -23,13 +23,13 @@
         
         <p><strong>Step 1:</strong> Make stock with chicken thighs, half an onion, and half a carrot.
 </p>
-        <p><strong>Step 2:</strong> While the stock is cooking, fry onion and shredded carrots for ten minutes until golden.
+        <p><strong>Step 2:</strong> While the stock is cooking, fry onion and shredded carrots for ten minutes.
 </p>
         <p><strong>Step 3:</strong> The stock should be ready in 30-40 minutes. When the stock is ready, Add the fried carrots and onion to the stock.
 </p>
         <p><strong>Step 4:</strong> Season. Add salt, black pepper, coriander, and bay leaves.
 </p>
-        <p><strong>Step 5:</strong> Bring back to boil and add noodles. Cook 7-10 minutes.
+        <p><strong>Step 5:</strong> Bring back to boil and add noodles. Cook 6-10 minutes.
 </p>
         <p><strong>Step 6:</strong> Serve.
 </p>
