--- a/meatball-soup.html
+++ b/meatball-soup.html
@@ -36,7 +36,7 @@
 </p>
         <p><strong>Step 7:</strong> Place the seared onions and carrots into the soup. Add parsley.
 </p>
-        <p><strong>Step 8:</strong> Once the meatballs are cooked, cook on low heat for 5-7 minutes.
+        <p><strong>Step 8:</strong> Once the meatballs float, cook on low heat for 5-7 minutes.
 </p>
         <p><strong>Step 9:</strong> Serve.
 </p>
