--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <a href="meatball-soup">Meatball Soup</a>
         <a href="cookies">Cookies</a>
 
-        <br><br><a style {padding-top: 80%;} href="https://github.com/korynthian/recipes">See the code behind this website!</a>
+        <br><br><a  href="https://github.com/korynthian/recipes" id="code">See the code behind this website!</a>
 
     </body>
 </html>
