--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+    <!DOCTYPE html>
 <html>
     <head>
         <title>Recipe Index</title>
@@ -18,6 +18,6 @@
         <a href="cookies">Cookies</a>
 
         <br><br><a  href="https://github.com/korynthian/recipes" id="code">See the code behind this website!</a>
-
+        <script src="script.js"></script>
     </body>
 </html>
