--- a/crepes.html
+++ b/crepes.html
@@ -44,5 +44,6 @@
 </p>
         <p><strong>Step 11:</strong> Repeat steps 9 and 10 until there is no batter left in the bowl. Serve.
 </p>
+        <script src="script.js"></script>
     </body>
 </html>
