--- a/cookies.html
+++ b/cookies.html
@@ -217,5 +217,6 @@
         		Enjoy fresh now, or later!
         	</li>
         </ol>
+        <script src="script.js"></script>
     </body>
 </html>
