--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <a href="meatball-soup">Meatball Soup</a>
         <a href="cookies">Cookies</a>
 
-        <button onclick="light-mode()">Toggle light mode</button>
+        <button onclick="light-mode()" id="light-mode">Toggle light mode</button>
         
         <br><br><a  href="https://github.com/korynthian/recipes" id="code">See the code behind this website!</a>
         <script src="script.js"></script>
