--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <a href="meatballs">Meatballs</a>
         <a href="meatball-soup">Meatball Soup</a>
         <a href="cookies">Cookies</a>
-        <a href="banana-bread">Banana-blueberry Bread</a>
+        <a href="banana-bread">Banana Blueberry Bread</a>
         
         <br><br><a  href="https://github.com/korynthian/recipes" id="code">See the code behind this website!</a>
         <script src="script.js"></script>
