added more bread

--- a/banana-bread.html
+++ b/banana-bread.html
@@ -17,7 +17,7 @@
             <li>4 cups bread flour</li>
             <li>1/4 cup sugar</li>
             <li>1 teaspoon salt</li>
-            <li>1 1/4 teaspons yeast</li
+            <li>1 1/4 teaspons yeast</li>
             <li>1/2 cup blueberries, dried or fresh</li>
 
 
