--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         <a href="meatball-soup">Meatball Soup</a>
         <a href="cookies">Cookies</a>
         <a href="banana-bread">Banana Blueberry Bread</a>
+        <a href="bread">Bread</a>
+        <a href="kulich">Kulich Bread</a>
         
         <br><br><a  href="https://github.com/korynthian/recipes" id="code">See the code behind this website!</a>
         <script src="script.js"></script>
