--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <!-- adkjhasdkjh -->
-       
+        <!-- akjdskhasdkjasdkjhsdasjkdh -->
+
         <h1>Korynthian's Recipes!</h1>
         
         <h2>Index:</h2>
