--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <a href="kulich">Kulich Bread</a>
         </div>
         
-      <a  href="https://github.com/korynthian/recipes" id="code">See the code behind this website!</a>
+      <a  href="https://github.com/korynthian/recipes" class = "footer">See the code behind this website!</a>
         <script src="script.js"></script>
     </body>
 </html>
