--- a/cookies.html
+++ b/cookies.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Cookies Recipe</title>
+        <title class = "header">Cookies Recipe</title>
         <meta charset="utf-8">
         <link rel="stylesheet" href="styles.css">
     </head>
