--- a/cookies.html
+++ b/cookies.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title class = "header">Cookies Recipe</title>
+        <title>Cookies Recipe</title>
         <meta charset="utf-8">
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <a href="index">Index</a>
-        <h1>
+        <h1 class = "header">
         	<strong>
         		Chocolate Chip Cookies: Recipe
         	</strong>
