--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-    <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
     <head>
         <title>Recipe Index</title>
@@ -20,6 +20,7 @@
         <a href="banana-bread">Banana Blueberry Bread</a>
         <a href="bread">Bread</a>
         <a href="kulich">Kulich Bread</a>
+        <a href="black-currant-ic">Black Currant Ice Cream</a>
         </div>
         
       <a  href="https://github.com/korynthian/recipes" class = "footer">See the code behind this website!</a>
