--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                 <a href="bread.html">Bread</a>
                 <a href="kulich.html">Kulich Bread</a>
                 <a href="black-currant-ic.html">Black Currant Ice Cream</a>
+                <a href="pancakes.html">Cinnamon Pancakes</a>
             </div>
         </div>
         
