Added light mode

--- a/kulich.html
+++ b/kulich.html
@@ -4,13 +4,18 @@
         <title>Kulich Recipe</title>
         <meta charset="utf-8">
         <link rel="stylesheet" href="styles.css">
+        <link rel="icon" type="image/x-icon" href="cookie.jpg">
     </head>
     <body>
         <a href="index">Index</a>
         <h2>Kulich Bread</h2>
         
         <p>Kulich is a traditional Russian Easter bread.</p>
-
+        <!-- Dark Mode Switch -->
+        <label class="switch">
+                <input type="checkbox" id="darkModeToggle">
+                <span class="slider round"></span>
+        </label>
         <ul>
             <li>1/2 cup raisins</li>
             <li>3 tablespoons orange juice</li>
