--- a/banana-bread.html
+++ b/banana-bread.html
@@ -4,11 +4,16 @@
         <title>Banana Bread Recipe</title>
         <meta charset="utf-8">
         <link rel="stylesheet" href="styles.css">
+        <link rel="icon" type="image/x-icon" href="cookie.jpg">
     </head>
     <body>
         <a href="index">Index</a>
         <h2>Banana-Blueberry Bread</h2>
-        
+        <!-- Dark Mode Switch -->
+        <label class="switch">
+            <input type="checkbox" id="darkModeToggle">
+            <span class="slider round"></span>
+        </label>
         <ul>
             <li>3/4 cup Kefir</li>
             <li>2-4 bananas</li>
