--- a/black-currant-ic.html
+++ b/black-currant-ic.html
@@ -4,10 +4,17 @@
         <title>Black Currant Ice Cream Recipe</title>
         <meta charset="utf-8">
         <link rel="stylesheet" href="styles.css">
+        <link rel="icon" type="image/x-icon" href="cookie.jpg">
     </head>
     <body>
         <a href="index">Index</a>
         <h3><strong>Black Currant Ice Cream Recipe</strong></h3>
+        <!-- Dark Mode Switch -->
+        <label class="switch">
+            <input type="checkbox" id="darkModeToggle">
+            <span class="slider round"></span>
+        </label>
+        <ul>
         <h4><strong>Ingredients</strong></h4>
         <p><strong>For the Black Currant Syrup:</strong></p>
         <ul>
