--- a/bread.html
+++ b/bread.html
@@ -4,11 +4,17 @@
         <title>Classic White Bread</title>
         <meta charset="utf-8">
         <link rel="stylesheet" href="styles.css">
+        <link rel="icon" type="image/x-icon" href="cookie.jpg">
     </head>
     <body>
         <a href="index">Index</a>
         <h2>Bread</h2>
-        
+        <!-- Dark Mode Switch -->
+        <label class="switch">
+            <input type="checkbox" id="darkModeToggle">
+            <span class="slider round"></span>
+        </label>
+        <ul>
         <ul>
             <li>1 1/4 cups milk</li>
             <li>1/4 cup water</li>
