--- a/chicken-noodle-soup.html
+++ b/chicken-noodle-soup.html
@@ -4,11 +4,17 @@
         <title>Chicken Noodle Soup Recipe</title>
         <meta charset="utf-8">
         <link rel="stylesheet" href="styles.css">
+        <link rel="icon" type="image/x-icon" href="cookie.jpg">
     </head>
     <body>
         <a href="index">Index</a>
         <h2>Chicken Noodle Soup</h2>
-        
+        <!-- Dark Mode Switch -->
+        <label class="switch">
+                <input type="checkbox" id="darkModeToggle">
+                <span class="slider round"></span>
+            </label>
+            <ul>
         <ul>
             <li>Water</li>
             <li>Chicken Thighs</li>
