--- a/cookies.html
+++ b/cookies.html
@@ -4,6 +4,7 @@
         <title>Cookies Recipe</title>
         <meta charset="utf-8">
         <link rel="stylesheet" href="styles.css">
+		<link rel="icon" type="image/x-icon" href="cookie.jpg">
     </head>
     <body>
            <a href="index">Index</a>
@@ -12,7 +13,12 @@
         		Chocolate Chip Cookies: Recipe
         	</strong>
         </h1>
- 
+		<!-- Dark Mode Switch -->
+        <label class="switch">
+            <input type="checkbox" id="darkModeToggle">
+            <span class="slider round"></span>
+        </label>
+        <ul>
         <h2>
         	<em>
         		Based on
