--- a/meatball-soup.html
+++ b/meatball-soup.html
@@ -4,11 +4,16 @@
         <title>Meatball Soup Recipe</title>
         <meta charset="utf-8">
         <link rel="stylesheet" href="styles.css">
+        <link rel="icon" type="image/x-icon" href="cookie.jpg">
     </head>
     <body>
         <a href="index">Index</a>
         <h2>Meatball Soup</h2>
-        
+        <!-- Dark Mode Switch -->
+        <label class="switch">
+                <input type="checkbox" id="darkModeToggle">
+                <span class="slider round"></span>
+        </label>
         <ul>
             <li>Onion</li>
             <li>Carrot</li>
