--- a/meatballs.html
+++ b/meatballs.html
@@ -4,10 +4,16 @@
         <title>Meatballs Recipe</title>
         <meta charset="utf-8">
         <link rel="stylesheet" href="styles.css">
+        <link rel="icon" type="image/x-icon" href="cookie.jpg">
     </head>
     <body>
         <a href="index">Index</a>
         <h2>Meatballs</h2>
+        <!-- Dark Mode Switch -->
+        <label class="switch">
+                <input type="checkbox" id="darkModeToggle">
+                <span class="slider round"></span>
+        </label>
         <ul>
             <li>Ground Meat</li>
             <li>Chopped Onion</li>
