--- a/pancakes.html
+++ b/pancakes.html
@@ -4,11 +4,16 @@
         <title>Cinnamon Pancakes Recipe</title>
         <meta charset="utf-8">
         <link rel="stylesheet" href="styles.css">
+        <link rel="icon" type="image/x-icon" href="cookie.jpg">
     </head>
     <body>
         <a href="index">Index</a>
         <h2>Cinnamon Pancakes Recipe</h2>
-        
+        <!-- Dark Mode Switch -->
+        <label class="switch">
+                <input type="checkbox" id="darkModeToggle">
+                <span class="slider round"></span>
+        </label>
         <ul>
             <li>2 cups flour</li>
             <li>1/4 cup sugar</li>
